# ai-fullstack-app

backend/: .env  agent.py  llm-app.py  llm_app.py  models.py  pyproject.toml  server.bak.py  server.py  test.py
frontend/: pnpm-lock.yaml
frontend/src/api/: chat.ts
frontend/src/composables/: useChat.ts
frontend/src/types/: chat.ts  chats.ts
